--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
  Azure Fundamentals exam is an opportunity to prove 
  knowledge of cloud concepts, Azure services, Azure workloads, 
  security and privacy in Azure, as well as Azure pricing and support.
-baseurl: "/az900" # the subpath of your site, e.g. /blog
-url: "https://shubhamfullstack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  shubhamfullstack
 
