--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ description: >- # this means to ignore newlines until "baseurl:"
  knowledge of cloud concepts, Azure services, Azure workloads, 
  security and privacy in Azure, as well as Azure pricing and support.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://shubhamfullstack.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  shubhamfullstack
 
 # Build settings
-theme: jekyll-theme-architect
+theme: minima
 # plugins:
 #   - jekyll-feed
 
